@@ -17,7 +17,6 @@
 package com.google.errorprone.bugpatterns.formatstring;
 
 import com.google.errorprone.CompilationTestHelper;
-import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.JUnit4;
@@ -26,13 +25,8 @@ import org.junit.runners.JUnit4;
 @RunWith(JUnit4.class)
 public class FormatStringAnnotationCheckerTest {
 
-  private CompilationTestHelper compilationHelper;
-
-  @Before
-  public void setUp() {
-    compilationHelper =
-        CompilationTestHelper.newInstance(FormatStringAnnotationChecker.class, getClass());
-  }
+  private final CompilationTestHelper compilationHelper =
+      CompilationTestHelper.newInstance(FormatStringAnnotationChecker.class, getClass());
 
   @Test
   public void testMatches_failsWithNonMatchingFormatArgs() {
@@ -119,7 +113,7 @@ public class FormatStringAnnotationCheckerTest {
             "  @FormatMethod public static void log(@FormatString String s, Object... args) {}",
             "  public static void callLog() {",
             "    final String formatString = \"%d\";",
-            "    log(formatString, new Integer(0));",
+            "    log(formatString, Integer.valueOf(0));",
             "  }",
             "}")
         .doTest();
@@ -286,8 +280,8 @@ public class FormatStringAnnotationCheckerTest {
         .addSourceLines(
             "test/FormatStringTestCase.java",
             "package test;",
-            "import static org.mockito.Matchers.any;",
-            "import static org.mockito.Matchers.eq;",
+            "import static org.mockito.ArgumentMatchers.any;",
+            "import static org.mockito.ArgumentMatchers.eq;",
             "import static org.mockito.Mockito.verify;",
             "import com.google.errorprone.annotations.FormatMethod;",
             "import com.google.errorprone.annotations.FormatString;",
@@ -295,6 +289,43 @@ public class FormatStringAnnotationCheckerTest {
             "  @FormatMethod public void log(@FormatString String s, Object... args) {}",
             "  public void callLog(String s, Object... args) {",
             "    verify(this).log(any(String.class), eq(args));",
+            "  }",
+            "}")
+        .doTest();
+  }
+
+  @Test
+  public void testMatches_succeedsForMockitoArgumentMatchers() {
+    compilationHelper
+        .addSourceLines(
+            "test/FormatStringTestCase.java",
+            "package test;",
+            "import static org.mockito.ArgumentMatchers.any;",
+            "import static org.mockito.ArgumentMatchers.eq;",
+            "import static org.mockito.Mockito.verify;",
+            "import com.google.errorprone.annotations.FormatMethod;",
+            "import com.google.errorprone.annotations.FormatString;",
+            "public class FormatStringTestCase {",
+            "  @FormatMethod public void log(@FormatString String s, Object... args) {}",
+            "  public void callLog(String s, Object... args) {",
+            "    verify(this).log(any(String.class), eq(args));",
+            "  }",
+            "}")
+        .doTest();
+  }
+
+  @Test
+  public void negative_noFormatString() {
+    compilationHelper
+        .addSourceLines(
+            "test/FormatStringTestCase.java",
+            "package test;",
+            "import com.google.errorprone.annotations.FormatMethod;",
+            "public class FormatStringTestCase {",
+            "  // BUG: Diagnostic contains: must contain at least one String parameter",
+            "  @FormatMethod public static void log(int x, int y) {}",
+            "  void test() { ",
+            "    log(1, 2);",
             "  }",
             "}")
         .doTest();
