@@ -16,7 +16,7 @@
 
 package com.google.errorprone.matchers;
 
-import static com.google.errorprone.BugPattern.Category.ONE_OFF;
+import static com.google.common.truth.Truth.assertThat;
 import static com.google.errorprone.BugPattern.SeverityLevel.ERROR;
 import static com.google.errorprone.matchers.Matchers.inLoop;
 import static com.google.errorprone.matchers.Matchers.isPrimitiveOrVoidType;
@@ -25,6 +25,7 @@ import static com.google.errorprone.matchers.Matchers.isSubtypeOf;
 import static com.google.errorprone.matchers.Matchers.isVoidType;
 import static com.google.errorprone.matchers.Matchers.methodReturns;
 import static com.google.errorprone.suppliers.Suppliers.typeFromString;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.fail;
 
 import com.google.errorprone.BugPattern;
@@ -35,13 +36,13 @@ import com.google.errorprone.bugpatterns.BugChecker;
 import com.google.errorprone.bugpatterns.BugChecker.ClassTreeMatcher;
 import com.google.errorprone.bugpatterns.BugChecker.MethodInvocationTreeMatcher;
 import com.google.errorprone.bugpatterns.BugChecker.MethodTreeMatcher;
+import com.google.errorprone.matchers.method.MethodMatchers;
 import com.google.errorprone.scanner.ErrorProneScanner;
 import com.google.errorprone.scanner.ScannerSupplier;
 import com.sun.source.tree.ClassTree;
 import com.sun.source.tree.MethodInvocationTree;
 import com.sun.source.tree.MethodTree;
 import com.sun.source.tree.Tree;
-import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.JUnit4;
@@ -50,12 +51,8 @@ import org.junit.runners.JUnit4;
 @RunWith(JUnit4.class)
 public class MatchersTest {
 
-  private CompilationTestHelper compilationHelper;
-
-  @Before
-  public void setUp() {
-    compilationHelper = CompilationTestHelper.newInstance(InLoopChecker.class, getClass());
-  }
+  private final CompilationTestHelper compilationHelper =
+      CompilationTestHelper.newInstance(InLoopChecker.class, getClass());
 
   @Test
   public void methodNameWithParenthesisThrows() {
@@ -287,7 +284,7 @@ public class MatchersTest {
             "    return true;",
             "  }",
             "  public Object doesntMatch2() {",
-            "    return new Integer(42);",
+            "    return Integer.valueOf(42);",
             "  }",
             "  // BUG: Diagnostic contains:",
             "  public void matches() {",
@@ -380,6 +377,45 @@ public class MatchersTest {
   }
 
   @Test
+  public void sameArgumentGoesOutOfBounds() {
+    AssertionError thrown =
+        assertThrows(
+            AssertionError.class,
+            () ->
+                CompilationTestHelper.newInstance(SameArgumentChecker.class, getClass())
+                    .addSourceLines(
+                        "test/SameArgumentCheckerTest.java",
+                        "package test;",
+                        "public class SameArgumentCheckerTest {",
+                        "  public void matches(Object... args) {",
+                        "  }",
+                        "  public void callsMatch() {",
+                        "    Object obj = new Object();",
+                        "    matches(obj, \"some arg\");",
+                        "  }",
+                        "}")
+                    .doTest());
+    assertThat(thrown).hasMessageThat().contains("IndexOutOfBoundsException");
+  }
+
+  @Test
+  public void booleanConstantMatchesTrue() {
+    CompilationTestHelper.newInstance(BooleanConstantTrueChecker.class, getClass())
+        .addSourceLines(
+            "test/BooleanConstantTrueCheckerTest.java",
+            "package test;",
+            "public class BooleanConstantTrueCheckerTest {",
+            "  public void function() {",
+            "    // BUG: Diagnostic contains:",
+            "    method(Boolean.TRUE);",
+            "    method(Boolean.FALSE);",
+            "  }",
+            "  void method(Object value) {}",
+            "}")
+        .doTest();
+  }
+
+  @Test
   public void packageNameChecker() {
     CompilationTestHelper.newInstance(PackageNameChecker.class, getClass())
         .addSourceLines(
@@ -424,7 +460,6 @@ public class MatchersTest {
   @BugPattern(
       name = "InLoopChecker",
       summary = "Checker that flags the given expression statement if the given matcher matches",
-      category = ONE_OFF,
       severity = ERROR)
   public static class InLoopChecker extends MatcherChecker {
     public InLoopChecker() {
@@ -439,7 +474,6 @@ public class MatchersTest {
   @BugPattern(
       name = "MethodTreeChecker",
       summary = "Checker that flags the given method declaration if the given matcher matches",
-      category = ONE_OFF,
       severity = ERROR)
   static class MethodTreeChecker extends BugChecker implements MethodTreeMatcher {
     private final Matcher<MethodTree> matcher;
@@ -458,7 +492,6 @@ public class MatchersTest {
   @BugPattern(
       name = "MethodInvocationTreeChecker",
       summary = "Checker that flags the given method invocation if the given matcher matches",
-      category = ONE_OFF,
       severity = ERROR)
   public static class NoAnnotatedCallsChecker extends BugChecker
       implements MethodInvocationTreeMatcher {
@@ -471,11 +504,29 @@ public class MatchersTest {
     }
   }
 
+  /** Simple checker to make sure sameArgument doesn't throw IndexOutOfBoundsException. */
+  @BugPattern(
+      name = "SameArgumentChecker",
+      summary = "Checker that matches invocation if the first argument is repeated",
+      severity = ERROR)
+  public static class SameArgumentChecker extends BugChecker
+      implements MethodInvocationTreeMatcher {
+    @Override
+    public Description matchMethodInvocation(MethodInvocationTree tree, VisitorState state) {
+      // intentionally go above arg size.
+      for (int i = 1; i <= tree.getArguments().size(); i++) {
+        if (Matchers.sameArgument(0, i).matches(tree, state)) {
+          return describeMatch(tree);
+        }
+      }
+      return Description.NO_MATCH;
+    }
+  }
+
   /** Checker that makes sure symbolHasAnnotation matches on MethodInvocationTree. */
   @BugPattern(
       name = "NoAnnotatedDeclarationCallsChecker",
       summary = "Checker that flags the given method invocation if the given matcher matches",
-      category = ONE_OFF,
       severity = ERROR)
   public static class NoAnnotatedDeclarationCallsChecker extends BugChecker
       implements MethodInvocationTreeMatcher {
@@ -492,7 +543,6 @@ public class MatchersTest {
   @BugPattern(
       name = "PackageNameChecker",
       summary = "Checks the name of the package",
-      category = ONE_OFF,
       severity = ERROR)
   public static class PackageNameChecker extends BugChecker implements ClassTreeMatcher {
     private static final Matcher<Tree> MATCHER = Matchers.packageStartsWith("test.foo");
@@ -500,6 +550,27 @@ public class MatchersTest {
     @Override
     public Description matchClass(ClassTree tree, VisitorState state) {
       return MATCHER.matches(tree, state) ? describeMatch(tree) : Description.NO_MATCH;
+    }
+  }
+
+  /** Checker that checks if an argument is 'Boolean.TRUE'. */
+  @BugPattern(
+      name = "BooleanConstantTrueChecker",
+      summary = "BooleanConstantTrueChecker",
+      severity = ERROR)
+  public static class BooleanConstantTrueChecker extends BugChecker
+      implements MethodInvocationTreeMatcher {
+
+    @Override
+    public Description matchMethodInvocation(MethodInvocationTree tree, VisitorState state) {
+      if (Matchers.methodInvocation(
+              MethodMatchers.anyMethod(),
+              ChildMultiMatcher.MatchType.AT_LEAST_ONE,
+              Matchers.booleanConstant(true))
+          .matches(tree, state)) {
+        return describeMatch(tree);
+      }
+      return Description.NO_MATCH;
     }
   }
 }
