@@ -16,23 +16,38 @@
 
 package com.google.errorprone;
 
+import static com.google.common.base.Preconditions.checkState;
+import static com.google.common.collect.ImmutableList.toImmutableList;
+import static com.google.common.collect.ImmutableMap.toImmutableMap;
+import static com.google.common.collect.Streams.stream;
 import static com.google.common.truth.Truth.assertAbout;
 import static com.google.common.truth.Truth.assertThat;
+import static com.google.common.truth.Truth.assertWithMessage;
+import static com.google.errorprone.FileObjects.forResource;
+import static com.google.errorprone.FileObjects.forSourceLines;
 import static com.google.testing.compile.JavaSourceSubjectFactory.javaSource;
 import static org.junit.Assert.fail;
 
+import com.google.common.base.Joiner;
+import com.google.common.collect.ImmutableBiMap;
 import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Iterators;
-import com.google.common.io.CharStreams;
+import com.google.errorprone.BugPattern.SeverityLevel;
+import com.google.errorprone.annotations.CanIgnoreReturnValue;
+import com.google.errorprone.annotations.CheckReturnValue;
 import com.google.errorprone.apply.DescriptionBasedDiff;
 import com.google.errorprone.apply.ImportOrganizer;
 import com.google.errorprone.apply.SourceFile;
 import com.google.errorprone.bugpatterns.BugChecker;
 import com.google.errorprone.fixes.Fix;
-import com.google.errorprone.matchers.Description;
 import com.google.errorprone.scanner.ErrorProneScanner;
 import com.google.errorprone.scanner.ErrorProneScannerTransformer;
+import com.google.errorprone.scanner.Scanner;
+import com.google.errorprone.scanner.ScannerSupplier;
+import com.google.errorprone.util.RuntimeVersion;
 import com.google.googlejavaformat.java.Formatter;
 import com.google.googlejavaformat.java.FormatterException;
 import com.google.testing.compile.JavaFileObjects;
@@ -40,12 +55,16 @@ import com.sun.source.tree.CompilationUnitTree;
 import com.sun.source.util.TreePath;
 import com.sun.tools.javac.api.JavacTaskImpl;
 import com.sun.tools.javac.api.JavacTool;
+import com.sun.tools.javac.main.JavaCompiler;
 import com.sun.tools.javac.tree.JCTree.JCClassDecl;
 import com.sun.tools.javac.tree.JCTree.JCCompilationUnit;
 import com.sun.tools.javac.util.Context;
 import java.io.IOException;
+import java.io.PrintWriter;
+import java.io.StringWriter;
 import java.io.UncheckedIOException;
-import java.nio.file.FileAlreadyExistsException;
+import java.net.URI;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
@@ -61,6 +80,7 @@ import javax.tools.JavaFileObject;
  *
  * @author kurs@google.com (Jan Kurs)
  */
+@CheckReturnValue
 public class BugCheckerRefactoringTestHelper {
 
   /** Test mode for matching refactored source against expected source. */
@@ -129,36 +149,72 @@ public class BugCheckerRefactoringTestHelper {
   }
 
   private final Map<JavaFileObject, JavaFileObject> sources = new HashMap<>();
-  private final BugChecker refactoringBugChecker;
-  private final ErrorProneInMemoryFileManager fileManager;
+  private final Class<?> clazz;
+  private final ScannerSupplier scannerSupplier;
 
   private FixChooser fixChooser = FixChoosers.FIRST;
   private List<String> options = ImmutableList.of();
   private boolean allowBreakingChanges = false;
   private String importOrder = "static-first";
 
-  private BugCheckerRefactoringTestHelper(BugChecker refactoringBugChecker, Class<?> clazz) {
-    this.refactoringBugChecker = refactoringBugChecker;
-    this.fileManager = new ErrorProneInMemoryFileManager(clazz);
+  private boolean run = false;
+
+  private BugCheckerRefactoringTestHelper(Class<?> clazz, ScannerSupplier scannerSupplier) {
+    this.clazz = clazz;
+    this.scannerSupplier = scannerSupplier;
+  }
+
+  /** @deprecated prefer {@link #newInstance(Class, Class)} */
+  @Deprecated
+  public static BugCheckerRefactoringTestHelper newInstance(
+      BugChecker refactoringBugChecker, Class<?> clazz) {
+    return new BugCheckerRefactoringTestHelper(
+        clazz, new OverrideIgnoringScannerSupplier(new ErrorProneScanner(refactoringBugChecker)));
+  }
+
+  /**
+   * Returns a new {@link CompilationTestHelper}.
+   *
+   * @param scannerSupplier the {@link ScannerSupplier} to test
+   * @param clazz the class to use to locate file resources
+   */
+  public static BugCheckerRefactoringTestHelper newInstance(
+      ScannerSupplier scannerSupplier, Class<?> clazz) {
+    return new BugCheckerRefactoringTestHelper(clazz, scannerSupplier);
   }
 
   public static BugCheckerRefactoringTestHelper newInstance(
-      BugChecker refactoringBugChecker, Class<?> clazz) {
-    return new BugCheckerRefactoringTestHelper(refactoringBugChecker, clazz);
+      Class<? extends BugChecker> checkerClass, Class<?> clazz) {
+    return new BugCheckerRefactoringTestHelper(
+        clazz, ScannerSupplier.fromBugCheckerClasses(checkerClass));
   }
 
   public BugCheckerRefactoringTestHelper.ExpectOutput addInput(String inputFilename) {
-    return new ExpectOutput(fileManager.forResource(inputFilename));
+    return new ExpectOutput(forResource(clazz, inputFilename));
   }
 
   public BugCheckerRefactoringTestHelper.ExpectOutput addInputLines(String path, String... input) {
-    String inputPath = getPath("in/", path);
-    assertThat(fileManager.exists(inputPath)).isFalse();
-    return new ExpectOutput(fileManager.forSourceLines(inputPath, input));
+    return new ExpectOutput(forSourceLines(path, input));
   }
 
   public BugCheckerRefactoringTestHelper setFixChooser(FixChooser chooser) {
     this.fixChooser = chooser;
+    return this;
+  }
+
+  public BugCheckerRefactoringTestHelper addModules(String... modules) {
+    if (!RuntimeVersion.isAtLeast9()) {
+      return this;
+    }
+    return setArgs(
+        Arrays.stream(modules)
+            .map(m -> String.format("--add-exports=%s=ALL-UNNAMED", m))
+            .collect(toImmutableList()));
+  }
+
+  public BugCheckerRefactoringTestHelper setArgs(ImmutableList<String> args) {
+    checkState(options.isEmpty());
+    this.options = args;
     return this;
   }
 
@@ -183,6 +239,8 @@ public class BugCheckerRefactoringTestHelper {
   }
 
   public void doTest(TestMode testMode) {
+    checkState(!run, "doTest should only be called once");
+    this.run = true;
     for (Map.Entry<JavaFileObject, JavaFileObject> entry : sources.entrySet()) {
       try {
         runTestOnPair(entry.getKey(), entry.getValue(), testMode);
@@ -203,35 +261,48 @@ public class BugCheckerRefactoringTestHelper {
     Context context = new Context();
     JCCompilationUnit tree = doCompile(input, sources.keySet(), context);
     JavaFileObject transformed = applyDiff(input, context, tree);
+    closeCompiler(context);
     testMode.verifyMatch(transformed, output);
     if (!allowBreakingChanges) {
-      doCompile(output, sources.values(), new Context());
+      Context anotherContext = new Context();
+      doCompile(output, sources.values(), anotherContext);
+      closeCompiler(anotherContext);
     }
   }
 
+  @CanIgnoreReturnValue
   private JCCompilationUnit doCompile(
       final JavaFileObject input, Iterable<JavaFileObject> files, Context context)
       throws IOException {
     JavacTool tool = JavacTool.create();
     DiagnosticCollector<JavaFileObject> diagnosticsCollector = new DiagnosticCollector<>();
-    context.put(ErrorProneOptions.class, ErrorProneOptions.empty());
+    ErrorProneOptions errorProneOptions;
+    try {
+      errorProneOptions = ErrorProneOptions.processArgs(options);
+    } catch (InvalidCommandLineOptionException e) {
+      throw new IllegalArgumentException("Exception during argument processing: " + e);
+    }
+    context.put(ErrorProneOptions.class, errorProneOptions);
+    StringWriter out = new StringWriter();
     JavacTaskImpl task =
         (JavacTaskImpl)
             tool.getTask(
-                CharStreams.nullWriter(),
-                fileManager,
+                new PrintWriter(out, true),
+                FileManagers.testFileManager(),
                 diagnosticsCollector,
-                options,
+                ImmutableList.copyOf(errorProneOptions.getRemainingArgs()),
                 /*classes=*/ null,
                 files,
                 context);
     Iterable<? extends CompilationUnitTree> trees = task.parse();
     task.analyze();
-    JCCompilationUnit tree =
-        Iterables.getOnlyElement(
-            Iterables.filter(
-                Iterables.filter(trees, JCCompilationUnit.class),
-                compilationUnit -> compilationUnit.getSourceFile() == input));
+    ImmutableMap<URI, ? extends CompilationUnitTree> byURI =
+        stream(trees).collect(toImmutableMap(t -> t.getSourceFile().toUri(), t -> t));
+    URI inputURI = input.toUri();
+    assertWithMessage(out + Joiner.on('\n').join(diagnosticsCollector.getDiagnostics()))
+        .that(byURI)
+        .containsKey(inputURI);
+    JCCompilationUnit tree = (JCCompilationUnit) byURI.get(inputURI);
     Iterable<Diagnostic<? extends JavaFileObject>> errorDiagnostics =
         Iterables.filter(
             diagnosticsCollector.getDiagnostics(), d -> d.getKind() == Diagnostic.Kind.ERROR);
@@ -245,16 +316,14 @@ public class BugCheckerRefactoringTestHelper {
       JavaFileObject sourceFileObject, Context context, JCCompilationUnit tree) throws IOException {
     ImportOrganizer importOrganizer = ImportOrderParser.getImportOrganizer(importOrder);
     final DescriptionBasedDiff diff = DescriptionBasedDiff.create(tree, importOrganizer);
-    transformer(refactoringBugChecker)
+    ErrorProneOptions errorProneOptions = context.get(ErrorProneOptions.class);
+    ErrorProneScannerTransformer.create(scannerSupplier.applyOverrides(errorProneOptions).get())
         .apply(
             new TreePath(tree),
             context,
-            new DescriptionListener() {
-              @Override
-              public void onDescribed(Description description) {
-                if (!description.fixes.isEmpty()) {
-                  diff.handleFix(fixChooser.choose(description.fixes));
-                }
+            description -> {
+              if (!description.fixes.isEmpty()) {
+                diff.handleFix(fixChooser.choose(description.fixes));
               }
             });
     SourceFile sourceFile = SourceFile.create(sourceFileObject);
@@ -276,29 +345,20 @@ public class BugCheckerRefactoringTestHelper {
     return tree.getPackage().packge.package_info.toString();
   }
 
-  private ErrorProneScannerTransformer transformer(BugChecker bugChecker) {
-    ErrorProneScanner scanner = new ErrorProneScanner(bugChecker);
-    return ErrorProneScannerTransformer.create(scanner);
-  }
-
   /** To assert the proper {@code .addInput().addOutput()} chain. */
   public class ExpectOutput {
     private final JavaFileObject input;
 
-    public ExpectOutput(JavaFileObject input) {
+    private ExpectOutput(JavaFileObject input) {
       this.input = input;
     }
 
     public BugCheckerRefactoringTestHelper addOutputLines(String path, String... output) {
-      String outputPath = getPath("out/", path);
-      if (fileManager.exists(outputPath)) {
-        throw new UncheckedIOException(new FileAlreadyExistsException(outputPath));
-      }
-      return addInputAndOutput(input, fileManager.forSourceLines(outputPath, output));
+      return addInputAndOutput(input, forSourceLines(path, output));
     }
 
     public BugCheckerRefactoringTestHelper addOutput(String outputFilename) {
-      return addInputAndOutput(input, fileManager.forResource(outputFilename));
+      return addInputAndOutput(input, forResource(clazz, outputFilename));
     }
 
     public BugCheckerRefactoringTestHelper expectUnchanged() {
@@ -306,10 +366,58 @@ public class BugCheckerRefactoringTestHelper {
     }
   }
 
-  private String getPath(String prefix, String path) {
-    // return prefix + path;
-    int insertAt = path.lastIndexOf('/');
-    insertAt = insertAt == -1 ? 0 : insertAt + 1;
-    return new StringBuilder(path).insert(insertAt, prefix + "/").toString();
+  private static void closeCompiler(Context context) {
+    JavaCompiler compiler = context.get(JavaCompiler.compilerKey);
+    if (compiler != null) {
+      compiler.close();
+    }
+  }
+
+  /**
+   * Wraps a {@code InstanceReturningScannerSupplier}, but silently skips {@link #applyOverrides}
+   * instead of throwing {@code UOE}.
+   */
+  private static class OverrideIgnoringScannerSupplier extends ScannerSupplier {
+
+    private final ScannerSupplier delegate;
+
+    public OverrideIgnoringScannerSupplier(ErrorProneScanner scanner) {
+      delegate = ScannerSupplier.fromScanner(scanner);
+    }
+
+    @Override
+    public Scanner get() {
+      return delegate.get();
+    }
+
+    @Override
+    public ScannerSupplier applyOverrides(ErrorProneOptions errorProneOptions) {
+      return this;
+    }
+
+    @Override
+    public ImmutableBiMap<String, BugCheckerInfo> getAllChecks() {
+      throw new UnsupportedOperationException();
+    }
+
+    @Override
+    public ImmutableSet<BugCheckerInfo> getEnabledChecks() {
+      throw new UnsupportedOperationException();
+    }
+
+    @Override
+    public ImmutableMap<String, SeverityLevel> severities() {
+      throw new UnsupportedOperationException();
+    }
+
+    @Override
+    protected ImmutableSet<String> disabled() {
+      throw new UnsupportedOperationException();
+    }
+
+    @Override
+    public ErrorProneFlags getFlags() {
+      throw new UnsupportedOperationException();
+    }
   }
 }
