@@ -16,24 +16,31 @@
 
 package com.google.errorprone;
 
+import static com.google.common.base.Preconditions.checkState;
+import static com.google.common.collect.ImmutableList.toImmutableList;
 import static com.google.common.truth.Truth.assertWithMessage;
+import static com.google.errorprone.FileObjects.forResource;
+import static com.google.errorprone.FileObjects.forSourceLines;
 import static java.nio.charset.StandardCharsets.UTF_8;
-import static org.junit.Assert.assertTrue;
+import static java.util.Arrays.asList;
+import static java.util.Arrays.stream;
 import static org.junit.Assert.fail;
 
 import com.google.common.base.Joiner;
-import com.google.common.base.Optional;
-import com.google.common.base.Preconditions;
 import com.google.common.base.Predicate;
 import com.google.common.collect.ImmutableList;
+import com.google.common.io.ByteStreams;
 import com.google.errorprone.DiagnosticTestHelper.LookForCheckNameInDiagnostic;
+import com.google.errorprone.annotations.CheckReturnValue;
 import com.google.errorprone.bugpatterns.BugChecker;
 import com.google.errorprone.scanner.ScannerSupplier;
+import com.google.errorprone.util.RuntimeVersion;
 import com.sun.tools.javac.api.JavacTool;
 import com.sun.tools.javac.main.Main.Result;
 import java.io.BufferedWriter;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
@@ -41,17 +48,17 @@ import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
+import java.util.Optional;
+import java.util.jar.JarEntry;
+import java.util.jar.JarOutputStream;
+import javax.annotation.Nullable;
 import javax.tools.Diagnostic;
-import javax.tools.JavaCompiler;
-import javax.tools.JavaCompiler.CompilationTask;
 import javax.tools.JavaFileObject;
-import javax.tools.StandardLocation;
 
 /** Helps test Error Prone bug checkers and compilations. */
+@CheckReturnValue
 public class CompilationTestHelper {
   private static final ImmutableList<String> DEFAULT_ARGS =
       ImmutableList.of(
@@ -60,27 +67,29 @@ public class CompilationTestHelper {
           // print stack traces for completion failures
           "-XDdev",
           "-parameters",
-          "-XDcompilePolicy=simple");
+          "-XDcompilePolicy=simple",
+          // Don't limit errors/warnings for tests to the default of 100
+          "-Xmaxerrs",
+          "500",
+          "-Xmaxwarns",
+          "500");
 
   private final DiagnosticTestHelper diagnosticHelper;
   private final BaseErrorProneJavaCompiler compiler;
   private final ByteArrayOutputStream outputStream;
-  private final ErrorProneInMemoryFileManager fileManager;
+  private final Class<?> clazz;
   private final List<JavaFileObject> sources = new ArrayList<>();
-  private List<String> args = ImmutableList.of();
+  private ImmutableList<String> extraArgs = ImmutableList.of();
+  @Nullable private ImmutableList<Class<?>> overrideClasspath;
   private boolean expectNoDiagnostics = false;
-  private Optional<Result> expectedResult = Optional.absent();
-  private boolean checkWellFormed = true;
+  private Optional<Result> expectedResult = Optional.empty();
   private LookForCheckNameInDiagnostic lookForCheckNameInDiagnostic =
       LookForCheckNameInDiagnostic.YES;
 
+  private boolean run = false;
+
   private CompilationTestHelper(ScannerSupplier scannerSupplier, String checkName, Class<?> clazz) {
-    this.fileManager = new ErrorProneInMemoryFileManager(clazz);
-    try {
-      fileManager.setLocation(StandardLocation.SOURCE_PATH, Collections.emptyList());
-    } catch (IOException e) {
-      throw new UncheckedIOException(e);
-    }
+    this.clazz = clazz;
     this.diagnosticHelper = new DiagnosticTestHelper(checkName);
     this.outputStream = new ByteArrayOutputStream();
     this.compiler = new BaseErrorProneJavaCompiler(JavacTool.create(), scannerSupplier);
@@ -116,21 +125,44 @@ public class CompilationTestHelper {
   // TODO(cushon): test compilations should be isolated so they can't pick things up from the
   // ambient classpath.
   static List<String> disableImplicitProcessing(List<String> args) {
-    if (args.indexOf("-processor") != -1 || args.indexOf("-processorpath") != -1) {
+    if (args.contains("-processor") || args.contains("-processorpath")) {
       return args;
     }
     return ImmutableList.<String>builder().addAll(args).add("-proc:none").build();
   }
 
   /**
-   * Creates a list of arguments to pass to the compiler, including the list of source files to
-   * compile. Uses DEFAULT_ARGS as the base and appends the extraArgs passed in.
+   * Creates a list of arguments to pass to the compiler. Uses DEFAULT_ARGS as the base and appends
+   * the overridden classpath, if provided, and any extraArgs that were provided.
    */
-  private static List<String> buildArguments(List<String> extraArgs) {
-    return ImmutableList.<String>builder()
-        .addAll(DEFAULT_ARGS)
-        .addAll(disableImplicitProcessing(extraArgs))
-        .build();
+  private static List<String> buildArguments(
+      @Nullable List<Class<?>> overrideClasspath, List<String> extraArgs) {
+    ImmutableList.Builder<String> result = ImmutableList.<String>builder().addAll(DEFAULT_ARGS);
+    getOverrideClasspath(overrideClasspath)
+        .ifPresent((Path jar) -> result.add("-cp").add(jar.toString()));
+    return result.addAll(disableImplicitProcessing(extraArgs)).build();
+  }
+
+  private static Optional<Path> getOverrideClasspath(@Nullable List<Class<?>> overrideClasspath) {
+    if (overrideClasspath == null) {
+      return Optional.empty();
+    }
+    try {
+      Path tempJarFile = Files.createTempFile(/* prefix = */ null, /* suffix = */ ".jar");
+      try (OutputStream os = Files.newOutputStream(tempJarFile);
+          JarOutputStream jos = new JarOutputStream(os)) {
+        for (Class<?> clazz : overrideClasspath) {
+          String entryPath = clazz.getName().replace('.', '/') + ".class";
+          jos.putNextEntry(new JarEntry(entryPath));
+          try (InputStream is = clazz.getClassLoader().getResourceAsStream(entryPath)) {
+            ByteStreams.copy(is, jos);
+          }
+        }
+      }
+      return Optional.of(tempJarFile);
+    } catch (IOException e) {
+      throw new UncheckedIOException(e);
+    }
   }
 
   /**
@@ -141,7 +173,7 @@ public class CompilationTestHelper {
    * foo", we expect to see a diagnostic on that line containing "foo". For each line of the test
    * file that does <i>not</i> contain the bug marker pattern, we expect no diagnostic to be
    * generated. You can also use "// BUG: Diagnostic matches: X" in tandem with {@code
-   * expectErrorMessage("X", "foo")} to allow you to programatically construct the error message.
+   * expectErrorMessage("X", "foo")} to allow you to programmatically construct the error message.
    *
    * @param path a path for the source file
    * @param lines the content of the source file
@@ -149,7 +181,7 @@ public class CompilationTestHelper {
   // TODO(eaftan): We could eliminate this path parameter and just infer the path from the
   // package and class name
   public CompilationTestHelper addSourceLines(String path, String... lines) {
-    this.sources.add(fileManager.forSourceLines(path, lines));
+    this.sources.add(forSourceLines(path, lines));
     return this;
   }
 
@@ -161,8 +193,38 @@ public class CompilationTestHelper {
    * @param path the path to the source file
    */
   public CompilationTestHelper addSourceFile(String path) {
-    this.sources.add(fileManager.forResource(path));
+    this.sources.add(forResource(clazz, path));
     return this;
+  }
+
+  /**
+   * Sets the classpath for the test compilation, overriding the default of using the runtime
+   * classpath of the test execution. This is useful to verify correct behavior when the classpath
+   * is incomplete.
+   *
+   * @param classes the class(es) to use as the classpath
+   */
+  public CompilationTestHelper withClasspath(Class<?>... classes) {
+    this.overrideClasspath = ImmutableList.copyOf(classes);
+    return this;
+  }
+
+  public CompilationTestHelper addModules(String... modules) {
+    if (!RuntimeVersion.isAtLeast9()) {
+      return this;
+    }
+    return setArgs(
+        stream(modules)
+            .map(m -> String.format("--add-exports=%s=ALL-UNNAMED", m))
+            .collect(toImmutableList()));
+  }
+
+  /**
+   * Sets custom command-line arguments for the compilation. These will be appended to the default
+   * compilation arguments.
+   */
+  public CompilationTestHelper setArgs(String... args) {
+    return setArgs(asList(args));
   }
 
   /**
@@ -170,7 +232,12 @@ public class CompilationTestHelper {
    * compilation arguments.
    */
   public CompilationTestHelper setArgs(List<String> args) {
-    this.args = args;
+    checkState(
+        extraArgs.isEmpty(),
+        "Extra args already set: old value: %s, new value: %s",
+        extraArgs,
+        args);
+    this.extraArgs = ImmutableList.copyOf(args);
     return this;
   }
 
@@ -181,16 +248,6 @@ public class CompilationTestHelper {
    */
   public CompilationTestHelper expectNoDiagnostics() {
     this.expectNoDiagnostics = true;
-    return this;
-  }
-
-  /**
-   * By default, the compilation helper will not run Error Prone on compilations that fail with
-   * javac errors. This behaviour can be disabled to test the interaction between Error Prone checks
-   * and javac diagnostics.
-   */
-  public CompilationTestHelper ignoreJavacErrors() {
-    this.checkWellFormed = false;
     return this;
   }
 
@@ -233,11 +290,11 @@ public class CompilationTestHelper {
   }
 
   /** Performs a compilation and checks that the diagnostics and result match the expectations. */
-  // TODO(eaftan): any way to ensure that this is actually called?
   public void doTest() {
-    Preconditions.checkState(!sources.isEmpty(), "No source files to compile");
-    List<String> allArgs = buildArguments(args);
-    Result result = compile(sources, allArgs.toArray(new String[allArgs.size()]));
+    checkState(!sources.isEmpty(), "No source files to compile");
+    checkState(!run, "doTest should only be called once");
+    this.run = true;
+    Result result = compile();
     for (Diagnostic<? extends JavaFileObject> diagnostic : diagnosticHelper.getDiagnostics()) {
       if (diagnostic.getCode().contains("error.prone.crash")) {
         fail(diagnostic.getMessage(Locale.ENGLISH));
@@ -254,13 +311,13 @@ public class CompilationTestHelper {
       assertWithMessage(
               String.format(
                   "Expected compilation result to be "
-                      + expectedResult.or(Result.OK)
+                      + expectedResult.orElse(Result.OK)
                       + ", but was %s. No diagnostics were emitted."
                       + " OutputStream from Compiler follows.\n\n%s",
                   result,
-                  outputStream.toString()))
+                  outputStream))
           .that(result)
-          .isEqualTo(expectedResult.or(Result.OK));
+          .isEqualTo(expectedResult.orElse(Result.OK));
     } else {
       for (JavaFileObject source : sources) {
         try {
@@ -270,92 +327,38 @@ public class CompilationTestHelper {
           throw new UncheckedIOException(e);
         }
       }
-      assertTrue(
-          "Unused error keys: " + diagnosticHelper.getUnusedLookupKeys(),
-          diagnosticHelper.getUnusedLookupKeys().isEmpty());
+      assertWithMessage("Unused error keys: " + diagnosticHelper.getUnusedLookupKeys())
+          .that(diagnosticHelper.getUnusedLookupKeys().isEmpty())
+          .isTrue();
     }
 
-    if (expectedResult.isPresent()) {
-      assertWithMessage(
-              String.format(
-                  "Expected compilation result %s, but was %s\n%s\n%s",
-                  expectedResult.get(),
-                  result,
-                  Joiner.on('\n').join(diagnosticHelper.getDiagnostics()),
-                  outputStream.toString()))
-          .that(result)
-          .isEqualTo(expectedResult.get());
-    }
+    expectedResult.ifPresent(
+        expected ->
+            assertWithMessage(
+                    String.format(
+                        "Expected compilation result %s, but was %s\n%s\n%s",
+                        expected,
+                        result,
+                        Joiner.on('\n').join(diagnosticHelper.getDiagnostics()),
+                        outputStream))
+                .that(result)
+                .isEqualTo(expected));
   }
 
-  private Result compile(Iterable<JavaFileObject> sources, String[] args) {
-    if (checkWellFormed) {
-      checkWellFormed(sources, args);
-    }
-    createAndInstallTempFolderForOutput(fileManager);
+  private Result compile() {
+    List<String> processedArgs = buildArguments(overrideClasspath, extraArgs);
     return compiler
             .getTask(
                 new PrintWriter(
                     new BufferedWriter(new OutputStreamWriter(outputStream, UTF_8)),
                     /*autoFlush=*/ true),
-                fileManager,
+                FileManagers.testFileManager(),
                 diagnosticHelper.collector,
-                /* options= */ ImmutableList.copyOf(args),
+                /* options= */ ImmutableList.copyOf(processedArgs),
                 /* classes= */ ImmutableList.of(),
                 sources)
             .call()
         ? Result.OK
         : Result.ERROR;
-  }
-
-  private static void createAndInstallTempFolderForOutput(
-      ErrorProneInMemoryFileManager fileManager) {
-    Path tempDirectory;
-    try {
-      tempDirectory =
-          Files.createTempDirectory(
-              fileManager.fileSystem().getRootDirectories().iterator().next(), "");
-    } catch (IOException e) {
-      throw new UncheckedIOException(e);
-    }
-    Arrays.stream(StandardLocation.values())
-        .filter(StandardLocation::isOutputLocation)
-        .forEach(
-            outputLocation -> {
-              try {
-                fileManager.setLocationFromPaths(outputLocation, ImmutableList.of(tempDirectory));
-              } catch (IOException e) {
-                throw new UncheckedIOException(e);
-              }
-            });
-  }
-
-  private void checkWellFormed(Iterable<JavaFileObject> sources, String[] args) {
-    createAndInstallTempFolderForOutput(fileManager);
-    JavaCompiler compiler = JavacTool.create();
-    OutputStream outputStream = new ByteArrayOutputStream();
-    String[] remainingArgs = null;
-    try {
-      remainingArgs = ErrorProneOptions.processArgs(args).getRemainingArgs();
-    } catch (InvalidCommandLineOptionException e) {
-      fail("Exception during argument processing: " + e);
-    }
-    CompilationTask task =
-        compiler.getTask(
-            new PrintWriter(
-                new BufferedWriter(new OutputStreamWriter(outputStream, UTF_8)),
-                /*autoFlush=*/ true),
-            fileManager,
-            null,
-            buildArguments(Arrays.asList(remainingArgs)),
-            null,
-            sources);
-    boolean result = task.call();
-    assertWithMessage(
-            String.format(
-                "Test program failed to compile with non Error Prone error: %s",
-                outputStream.toString()))
-        .that(result)
-        .isTrue();
   }
 }
